tests/baselines/reference/recursiveTypeParameterConstraintReferenceLacksTypeArgs.errors.txt
tests/cases/compiler/recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts(1,19): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts (1 errors) ====
    class A<T extends A> { }
                      ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.